apps/app-b/vm/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-b
  labels:
    istio-injection: enabled
