apps/app-b/vm/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: ns-b
  labels:
    app: app-b
    service: app-b
spec:
  ports:
    - port: 80
      targetPort: 8000
      name: http
    - port: 3000
      targetPort: 3000
      name: tcp
  selector:
    app: app-b
